--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,17 @@
-sphinxcontrib-packages (0.1.0)
+sphinxcontrib-packages 0.1.1 (Sat Jun 13 21:47:54 CEST 2015)
+
+  * Closes #5: New directive ``pyversions`` to list available python versions.
+  * Closes #6: New directives ``python`` to list available python packages
+    (more generic than ``python2`` and ``python3``, which still exist).
+  * Corrected bug when ``PATH`` contained non-existent directories.
+  * Python3.5 support
+  * Several minor improvement for documentation, tests and setup.
+
+  -- Louis
+
+sphinxcontrib-packages 0.1.0 (Sun, 05 Apr 2015 11:21:27 +0200)
 
   * Initial release.
   * Implements directives: packages:{platform,python2,python3,bin,c,deb,latex}
 
- -- Louis: Sun, 05 Apr 2015 11:21:27 +0200
+ -- Louis
